docs: Update doc files; Bump version to 0.5.1
